--- a/index.html
+++ b/index.html
@@ -1,9 +1,32 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/capivara.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Plataforma web para gerenciamento de turismo: organize roteiros, clientes, reservas e muito mais." />
+    <meta name="keywords" content="turismo, gestão, plataforma, viagens, roteiros" />
+    <meta name="author" content="Seu Nome ou Empresa" />
+    <meta name="theme-color" content="#4F46E5" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Tourism Management Web Platform" />
+    <meta property="og:description" content="Plataforma web para gerenciamento de turismo: organize roteiros, clientes, reservas e muito mais." />
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:url" content="https://ecoexpedicoes.vercel.app/" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tourism Management Web Platform" />
+    <meta name="twitter:description" content="Plataforma web para gerenciamento de turismo: organize roteiros, clientes, reservas e muito mais." />
+    <meta name="twitter:image" content="/og-image.jpg" />
+
+    <!-- Ícones -->
+    <link rel="icon" type="image/svg+xml" href="/capivara.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/capivara.png" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+
+    <!-- Título -->
     <title>Tourism Management Web Platform</title>
   </head>
   <body>
