--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <meta name="twitter:image" content="/og-image.jpg" />
 
     <!-- Ícones -->
-    <link rel="icon" type="image/svg+xml" href="/capivara.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/capivara.png" />
+    <link rel="icon" type="image/svg+xml" href="/capivara.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/capivara.ico" />
     <link rel="manifest" href="/manifest.webmanifest" />
 
     <!-- Título -->
